# lexpertz-axiom-engine

./: .gitignore  AGENTS.md  MEMORY.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml  tailwind.config.ts
.agents/skills/design-engineering/: SKILL.md
.github/workflows/: client-ci.yml  root-integrity.yml  server-ci.yml
.opencode/: OBSIDIAN_NAMESPACE.md  opencode.json
.opencode/designs/: 2026-07-14-mcp-orchestrator-design.md
.opencode/plans/: 21st-dev-magic-integration.md  C3_VERIFICATION.md  PRD_CLIENT.md
.opencode/plugins/orchestrator/: index.js  orchestrator.config.json
.opencode/prompts/agents/: vision-interpreter.txt
client/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
client/src/: middleware.ts  test-setup.ts
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/: api-keys-manager.tsx  app-sidebar.tsx  chat-input.tsx  chat-thread.tsx  command-center-home.tsx  providers.tsx  (+6 more)
client/types/: globals.d.ts
connector/: package-lock.json  package.json  tsconfig.json
connector/src/: index.ts
instructions/: INSTRUCTIONS.md
server/: .env.example  .gitignore  Dockerfile  README.md  requirements.txt  start_mcp.bat  start_mcp.sh
server/app/: main.py
server/migrations/: 001_init_vault.sql
tests/: conftest.py  test_agents.py  test_api.py  test_auth.py  test_chunking.py  test_core.py  test_monitor.py  test_nodes_skill_driven.py  test_prompt_renderer.py  test_prompts.py  test_retrieve_node_skip.py  test_skill_executor.py  test_skill_loader.py
(+84 files in other folders)
